<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <Button 
        android:id="@+id/go_ad_rect_wall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ad_rect_wall"
        />
    <Button 
        android:id="@+id/go_ad_rect_single"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ad_rect_single"
        android:visibility="visible"
        />
    <Button 
        android:id="@+id/go_ad_banner_single"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ad_banner_single"
        android:visibility="gone"
        />
    <Button 
        android:id="@+id/go_ad_banner_wall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ad_banner_wall"
        android:visibility="gone"
        />

</LinearLayout>
